UHF-8442: use hearing block instead of the view block

--- a/templates/paragraphs/paragraph--hearings.html.twig
+++ b/templates/paragraphs/paragraph--hearings.html.twig
@@ -12,7 +12,7 @@
   %}
     {% block component_content %}
 
-      {{ hearings }}
+      {{ content.list }}
 
     {% endblock component_content %}
   {% endembed %}
