--- a/src/scss/06_components/pages/_service-channel.scss
+++ b/src/scss/06_components/pages/_service-channel.scss
@@ -1,37 +1,3 @@
-.service-channel__links {
-  display: flex;
-  flex-direction: column;
-  gap: $spacing-half;
-  place-items: flex-start;
-
-  .service-channel__link-explanation {
-    @include font('small');
-    color: $color-black-60;
-    display: inline-block;
-    margin-bottom: 8px;
-  }
-
-  a:not(.service-channel__link) {
-    --background-color-hover: transparent;
-    --background-color-hover-focus: transparent;
-    --background-color: var(--hdbt-color-palette-button--secondary);
-    --background-color-focus: var(--hdbt-color-palette-button--secondary);
-    --border-color: var(--hdbt-color-palette-button--secondary);
-    --border-color-hover: var(--hdbt-color-palette-button--secondary);
-    --border-color-focus: var(--hdbt-color-palette-button--secondary);
-    --border-color-hover-focus: var(--hdbt-color-palette-button--secondary);
-    --color: var(--hdbt-color-palette-button-contrast--secondary);
-    --color-hover: var(--hdbt-color-palette-button--secondary);
-    --color-focus: var(--hdbt-color-palette-button-contrast--secondary);
-    --color-hover-focus: var(--hdbt-color-palette-button--secondary);
-    --focus-outline-color: var(--hdbt-color-palette-button--secondary);
-
-    &:first-child {
-      margin-top: 0;
-    }
-  }
-}
-
 .service-channel {
   @include font('body');
   background-color: var(--color-fog-light);
@@ -41,63 +7,42 @@
   @include breakpoint($breakpoint-l) {
     padding: $spacing-double;
   }
+}
 
-  .service-channel__type {
-    @include font('h3');
-    margin-top: 0;
-  }
+.service-channel__type {
+  @include font('h3');
+  margin-top: 0;
+}
 
-  .service-channel__title {
-    @include font('h4');
-    margin-top: $spacing-and-half;
+.service-channel__title {
+  @include font('h4');
+  margin-top: $spacing-and-half;
 
-    @include breakpoint($breakpoint-l) {
-      margin-top: $spacing-double;
-    }
-  }
-
-  .service-channel__links {
-    margin-top: $spacing-and-half;
+  @include breakpoint($breakpoint-l) {
+    margin-top: $spacing-double;
   }
 }
 
-.service-channel--eservice {
-  .service-channel__links {
-    margin-top: $spacing;
-  }
+.service-channel__links {
+  display: flex;
+  flex-direction: column;
+  gap: $spacing-half;
+  margin-top: $spacing-and-half;
+  place-items: flex-start;
 }
 
-//.service-channel--email .service-channel__type::after {
-//  @include pseudo-icon-replace('glyph-at');
-//}
-//
-//.service-channel--sms .service-channel__type::after {
-//  @include pseudo-icon-replace('mobile');
-//}
-//
-//.service-channel--telephone .service-channel__type::after {
-//  @include pseudo-icon-replace('phone');
-//}
-//
-//.service-channel--printable_form .service-channel__type::after {
-//  @include pseudo-icon-replace('document');
-//}
-//
-//.service-channel--webpage .service-channel__type::after {
-//  @include pseudo-icon-replace('globe');
-//}
-//
-//.service-channel--chat .service-channel__type::after {
-//  @include pseudo-icon-replace('speechbubble-text');
-//}
-//
-//.service-channel--local .service-channel__type::after {
-//  @include pseudo-icon-replace('location');
-//}
-//
-//.service-channel--mail .service-channel__type::after {
-//  @include pseudo-icon-replace('envelope');
-//}
+.service-channel--eservice .service-channel__links {
+  margin-top: $spacing;
+}
+
+.service-channel__link {
+  @include font('body');
+  font-weight: 500;
+}
+
+.service-channel--printable_form .service-channel__link::after {
+  @include pseudo-icon('printableform', calc(var(--line-height) * 1em), currentColor, inline-block);
+}
 
 .service-channel__address {
   .address > span {
@@ -108,30 +53,10 @@
     display: none;
   }
 }
-
-.service-channel__extra-information {
-  margin-top: $spacing;
-}
-
-.service-channel__phone-link {
-  @include font('body');
-}
-
-.service-channel__phone,
+.service-channel__address,
 .service-channel__email,
-.service-channel__address {
+.service-channel__phone {
   margin-top: $spacing-and-half;
-}
-
-.service-channel--no-title {
-  .service-channel__phone,
-  .service-channel__email {
-    margin-top: 0;
-  }
-}
-
-.service-channel--printable_form .service-channel__link::after {
-  @include pseudo-icon('printableform', calc(var(--line-height) * 1em), currentColor, inline-block);
 }
 
 .service-channel__availabilities,
@@ -139,13 +64,18 @@
   display: block;
   margin-top: $spacing;
 
-  .service-channel__availabilities-label,
-  .service-channel__call_charge-label {
-    display: block;
-    font-weight: $font-weight-medium;
-  }
-
   p:first-of-type {
+    margin-top: 0;
+  }
+}
+
+.service-channel__extra-information {
+  margin-top: $spacing;
+}
+
+.service-channel--no-title {
+  .service-channel__email,
+  .service-channel__phone {
     margin-top: 0;
   }
 }
