--- a/src/scss/06_components/paragraphs/__index.scss
+++ b/src/scss/06_components/paragraphs/__index.scss
@@ -26,3 +26,5 @@
 @import 'target-group-links';
 @import 'text';
 @import 'unit-search';
+@import 'unit-accessibility-information';
+@import 'unit-contact-card';
