UHF-8870: Add styles for the unit_contact_card and unit_accessibility_information paragraphs and add some logic so that correct information is displayed on the paragraphs

--- a/src/scss/06_components/paragraphs/__index.scss
+++ b/src/scss/06_components/paragraphs/__index.scss
@@ -25,3 +25,5 @@
 @import 'target-group-links';
 @import 'text';
 @import 'unit-search';
+@import 'unit-accessibility-information';
+@import 'unit-contact-card';
