UHF-8719: Change service channel printing to happen on errand service so that we can combine channels that are same type printed after each other

--- a/templates/module/helfi_tpr/tpr-service-channel.html.twig
+++ b/templates/module/helfi_tpr/tpr-service-channel.html.twig
@@ -5,109 +5,97 @@
  */
 #}
 
-{% if entity.type.value|lower == 'local' or entity.type.value|lower == 'mail' %}
+{% if channel_type|lower == 'local' or channel_type|lower == 'mail' %}
   {% set show_mail = true %}
-{% endif %}
-
-{% if content.name|render %}
-  {% set title_set = true %}
-{% endif %}
-
-
-{%
-  set classes = [
-  'service-channel',
-  view_mode ? 'service-channel--' ~ view_mode|clean_class,
-  'service-channel--' ~ entity.type.value|lower,
-  not title_set ? 'service-channel--no-title'
-]
-%}
-
-{% set service_channel_heading_level = service_channel_heading_level|default('h3') %}
-
-{% if service_channel_heading_level is same as('h2') %}
-  {% set service_channel_title_level = 'h3' %}
-{% elseif service_channel_heading_level is same as('h4') %}
-  {% set service_channel_title_level = 'h5' %}
-{% elseif service_channel_heading_level is same as('h5') %}
-  {% set service_channel_title_level = 'h6' %}
-{% else %}
-  {% set service_channel_title_level = 'h4' %}
 {% endif %}
 
 {% set service_channel_links_new_tab = service_channel_links_new_tab|default(0) %}
 
-<article{{ attributes.addClass(classes) }}>
+<{{ channel_title_level }} class="service-channel__title">
+  {{ channel.name.value }}
+</{{ channel_title_level }}>
 
-  <div{{ content_attributes.addClass('service-channel__header') }}>
-    <{{ service_channel_heading_level }}{{ content_attributes.addClass('service-channel__type') }}>
-      {{ service_channel_type_verb}}
-    </{{ service_channel_heading_level }}>
-    {% if title_set %}
-      <{{ service_channel_title_level }}{{ title_attributes.addClass('service-channel__title') }}>
-        {{ content.name }}
-      </{{ service_channel_title_level }}>
+{% if channel.availability_summary.value %}
+  <div class="service-channel__availabilities">
+    {{ channel.availability_summary.value }}
+  </div>
+{% endif %}
+
+
+{% if channel.getMailto and channel.email.value %}
+  {% set link_attributes = {
+    'class': [
+      'service-channel__link',
+      'service-channel__link--email',
+    ],
+  } %}
+  <div class="service-channel__email">
+    {{ link(channel.email.value, channel.getMailto, link_attributes) }}
+  </div>
+{% endif %}
+
+{% if channel.call_charge_info.value %}
+  <div class="service-channel__call_charge">
+    <span class="service-channel__call_charge-label">{{ 'Call charge'|t({}, {'context': 'TPR service channel call charge info'}) }}:</span>
+    {% if channel.call_charge_info.value == 'pvm/mpm' or channel.call_charge_info.value == 'msa/lna' or channel.call_charge_info.value == 'mobile call charge / local network charge' %}
+      {{ 'Standard telephone charges apply'|t({}, {'context': 'Service channel default fee override'}) }}
+    {% else %}
+      {{ channel.call_charge_info.value }}
     {% endif %}
   </div>
+{% endif %}
 
-  {% if content.availability_summary|render %}
-    <div class="service-channel__availabilities">
-      {{ content.availability_summary }}
-    </div>
-  {% endif %}
-
-  {% if service_channel_email_link and content.email|render %}
+{% if channel.getPhoneNumber %}
+  <div class="service-channel__phone">
     {% set link_attributes = {
       'class': [
         'service-channel__link',
-        'service-channel__link--email',
+        'service-channel__link--phone',
       ],
     } %}
-    <div class="service-channel__email">
-      {{ link(content.email, service_channel_email_link, link_attributes) }}
-    </div>
-  {% endif %}
+    {{ link('Call'|t({}, {'context': 'Service channel phone number prefix'}) ~ ' ' ~ channel.phone.value, channel.getPhoneNumber, link_attributes) }}
+  </div>
+{% endif %}
 
-  {% if content.call_charge_info|render %}
-    <div class="service-channel__call_charge">
-      <span class="service-channel__call_charge-label">{{ 'Call charge'|t({}, {'context': 'TPR service channel call charge info'}) }}:</span>
-      {{ service_channel_phone_charge }}
-    </div>
-  {% endif %}
+{% if show_mail and channel.getFormattedAddress %}
+  <div class="service-channel__address">
+    {{ channel.getFormattedAddress }}
+  </div>
+{% endif %}
 
-  {% if content.phone|render %}
-    <div class="service-channel__phone">
-      {% set link_attributes = {
-        'class': [
-          'service-channel__link',
-          'service-channel__link--phone',
-        ],
-      } %}
-      {{ link(service_channel_phone_number, service_channel_phone_number_url, link_attributes) }}
-    </div>
-  {% endif %}
+{% if channel.requires_authentication.value == 1 or service_channel_links_new_tab %}
+  <div class="service-channel__extra-information">
+    {% if channel.requires_authentication.value == 1 %}
+      {{ 'Requires authentication'|t }}.
+    {% endif %}
+    {% if channel.links.value and service_channel_links_new_tab %}
+      {{ 'The link opens in a new tab'|t({}, {'context': 'Explanation for users that the link opens in a new tab instead of the expected current tab'}) }}.
+    {% endif %}
+  </div>
+{% endif %}
 
-  {% if show_mail and content.address|render %}
-    <div class="service-channel__address">
-      {{ content.address }}
-    </div>
-  {% endif %}
-
-  {% if entity.requires_authentication.value == 1 or service_channel_links_new_tab %}
-    <div class="service-channel__extra-information">
-      {% if entity.requires_authentication.value == 1 %}
-        {{ 'Requires authentication'|t }}.
+{% if channel.links.value %}
+  <div class="service-channel__links">
+    {% for link in channel.links.value %}
+      {% if channel_type|lower == 'eservice' %}
+        {% set link_attributes = {
+          'class': [
+            'hds-button',
+            'hds-button--primary',
+          ]
+        } %}
+        {% set link_title %}
+          <span class="hds-button__label">{{ link.title }}</span>
+        {% endset %}
+        {{ link(link_title, link.uri, link_attributes) }}
+      {% else %}
+        {% set link_attributes = {
+          'class': [
+            'service-channel__link'
+          ],
+        } %}
+        {{ link(link.title, link.uri, link_attributes) }}
       {% endif %}
-      {% if content.links|render and service_channel_links_new_tab %}
-        {{ 'The link opens in a new tab'|t({}, {'context': 'Explanation for users that the link opens in a new tab instead of the expected current tab'}) }}.
-      {% endif %}
-    </div>
-  {% endif %}
-
-  {% if content.links|render %}
-    <div class="service-channel__links">
-      {{ content.links }}
-    </div>
-  {% endif %}
-
-</article>
+    {% endfor %}
+  </div>
+{% endif %}
