--- a/templates/module/helfi_tpr/tpr-service-channel.html.twig
+++ b/templates/module/helfi_tpr/tpr-service-channel.html.twig
@@ -12,7 +12,7 @@
 {% set service_channel_links_new_tab = service_channel_links_new_tab|default(0) %}
 
 <{{ channel_title_level }} class="service-channel__title">
-  {{ channel.name.value }}
+{{ channel.name.value }}
 </{{ channel_title_level }}>
 
 {% if channel.availability_summary.value %}
@@ -63,7 +63,7 @@
   </div>
 {% endif %}
 
-{% if channel.requires_authentication.value == 1 or service_channel_links_new_tab %}
+{% if channel.requires_authentication.value == 1 or service_channel_eservice_links_new_tab %}
   <div class="service-channel__extra-information">
     {% if channel.requires_authentication.value == 1 %}
       {{ 'Requires authentication'|t }}.
@@ -78,12 +78,24 @@
   <div class="service-channel__links">
     {% for link in channel.links.value %}
       {% if channel_type|lower == 'eservice' %}
-        {% set link_attributes = {
-          'class': [
-            'hds-button',
-            'hds-button--primary',
-          ]
-        } %}
+        {% if service_channel_eservice_links_new_tab %}
+          {% set link_attributes = {
+            'class': [
+              'hds-button',
+              'hds-button--primary',
+            ],
+            'target': [
+              '_blank',
+            ]
+          } %}
+        {% else %}
+          {% set link_attributes = {
+            'class': [
+              'hds-button',
+              'hds-button--primary',
+            ],
+          } %}
+        {% endif %}
         {% set link_title %}
           <span class="hds-button__label">{{ link.title }}</span>
         {% endset %}
