--- a/templates/content/external-entity--helfi-hearings.html.twig
+++ b/templates/content/external-entity--helfi-hearings.html.twig
@@ -22,7 +22,7 @@
   {% embed '@hdbt/component/card.twig' with {
     card_modifier_class: card_hearing_classes|join(' '),
     card_title: content.title[0]['#context'].value,
-    card_title_lang: 'fi',
+    card_title_lang: content.langcode[0]['#context'].value,
     card_image: content.main_image,
     card_url: content.url[0]['#context'].value,
     card_url_external: true,
