UHF-8442: added 'no items found' message and translations

--- a/templates/paragraphs/paragraph--hearings.html.twig
+++ b/templates/paragraphs/paragraph--hearings.html.twig
@@ -11,9 +11,11 @@
     }
   %}
     {% block component_content %}
-
-      {{ content.list }}
-
+      {% if content.list %}
+        {{ content.list }}
+      {% else %}
+        <p>{{ "At the moment there is no open hearings for commenting."|t }}</p>
+      {% endif %}
     {% endblock component_content %}
   {% endembed %}
 {% endblock paragraph %}
