--- a/templates/paragraphs/paragraph--hearings.html.twig
+++ b/templates/paragraphs/paragraph--hearings.html.twig
@@ -1,4 +1,5 @@
 {% block paragraph %}
+
   {% embed "@hdbt/misc/component.twig" with
     {
       component_classes: [
@@ -12,9 +13,34 @@
   %}
     {% block component_content %}
       {% if content.list %}
-        {{ content.list }}
+        {% set hearings_count = content.list[0]['#helfi_hearings'].get('count')[0].value %}
+        <section class="hearings__results">
+          <div class="hearings__count-container">
+            <span class="hearings__count">{{ hearings_count }}</span>
+            {% trans with {'context': 'Hearings count'}%}plan open for commenting{% plural hearings_count %}plans open for commenting{% endtrans %}
+          </div>
+          {{ content.list }}
+        </section>
+        {% include '@hdbt/navigation/link-button.html.twig' with {
+          type: 'primary',
+          label: 'See all plans'|t({},{'context': 'See all plans link text'}),
+          url: 'https://kerrokantasi.hel.fi/hearings/list?lang=' ~ current_langcode,
+          class: 'hearings__link',
+          is_external: true,
+          open_in_a_new_window: true,
+        } %}
       {% else %}
-        <p>{{ "At the moment there is no open hearings for commenting."|t }}</p>
+        <section class="hearings__results">
+          <p>{{ "At the moment there is no open hearings for commenting."|t }}</p>
+        </section>
+        {% include '@hdbt/navigation/link-button.html.twig' with {
+          type: 'primary',
+          label: 'See all already closed plans'|t({},{'context': 'See closed plans link text'}),
+          url: 'https://kerrokantasi.hel.fi/hearings/list?lang=' ~ current_langcode,
+          class: 'hearings__link',
+          is_external: true,
+          open_in_a_new_window: true,
+        } %}
       {% endif %}
     {% endblock component_content %}
   {% endembed %}
