--- a/templates/module/helfi_tpr/tpr-errand-service.html.twig
+++ b/templates/module/helfi_tpr/tpr-errand-service.html.twig
@@ -95,33 +95,7 @@
     {% if content.channels|render %}
       <div class="errand-service__channels">
 
-        {% for channels in errand_service_channels %}
-
-          {% set service_channel_type_class = 'service-channel--' ~ channels.type|lower %}
-
-          {% set service_channel_heading_level = service_channel_heading_level|default('h3') %}
-
-          {% if service_channel_heading_level is same as('h2') %}
-            {% set channel_title_level = 'h3' %}
-          {% elseif service_channel_heading_level is same as('h4') %}
-            {% set channel_title_level = 'h5' %}
-          {% elseif service_channel_heading_level is same as('h5') %}
-            {% set channel_title_level = 'h6' %}
-          {% else %}
-            {% set channel_title_level = 'h4' %}
-          {% endif %}
-
-          {% set service_channel_links_new_tab = service_channel_links_new_tab|default(0) %}
-
-          <article class="service-channel {{ service_channel_type_class }}">
-            <{{ service_channel_heading_level }} class="service-channel__type">
-              {{ channels.type_verb }}
-            </{{ service_channel_heading_level }}>
-            {% for channel in channels.content %}
-              {% include "@hdbt/module/helfi_tpr/tpr-service-channel.html.twig" with {channel: channel, channel_type: channels.type, channel_title_level: channel_title_level} %}
-            {% endfor %}
-          </article>
-        {% endfor %}
+        {{ content.channels }}
 
       </div>
     {% endif %}
