UHF-8719: Change the service channel title and service channel group title to modifiable variable

--- a/templates/module/helfi_tpr/tpr-service-channel-group.html.twig
+++ b/templates/module/helfi_tpr/tpr-service-channel-group.html.twig
@@ -1,4 +1,8 @@
+{%  set service_channel_group_heading_level = service_channel_group_heading_level|default('h3') %}
+
 <article class="service-channel service-channel--{{ type }}">
-  <h3 class="service-channel__type">{{ label }}</h3>
+  <{{ service_channel_group_heading_level }} class="service-channel__type">
+    {{ label }}
+  </{{ service_channel_group_heading_level }}>
   {{ content }}
 </article>
