UHF-8719: Increase the gap between groupped service channels content

--- a/src/scss/06_components/pages/_service-channel.scss
+++ b/src/scss/06_components/pages/_service-channel.scss
@@ -23,6 +23,14 @@
   }
 }
 
+.service-channel__content + .service-channel__content .service-channel__title {
+  margin-top: $spacing-double;
+
+  @include breakpoint($breakpoint-l) {
+    margin-top: $spacing-triple;
+  }
+}
+
 .service-channel__links {
   display: flex;
   flex-direction: column;
