UHF-8838: Template for services bulletin listing

--- a/src/scss/06_components/pages/_unit.scss
+++ b/src/scss/06_components/pages/_unit.scss
@@ -119,7 +119,7 @@
       margin-top: $spacing-triple;
     }
 
-    .service {
+    .service--teaser {
       width: 100%;
 
       @include breakpoint($breakpoint-l) {
