--- a/templates/module/helfi_tpr/tpr-unit-lower-content.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit-lower-content.html.twig
@@ -20,7 +20,7 @@
   %}
     {% block component_content %}
       <div class="unit__services">
-        {{ drupal_view('unit_services', 'unit_services') }}
+        {{ drupal_view('unit_services', 'unit_services_listing') }}
       </div>
     {% endblock component_content %}
   {% endembed %}
