--- a/templates/views/views-view--unit-services.html.twig
+++ b/templates/views/views-view--unit-services.html.twig
@@ -51,9 +51,21 @@
     {% endif %}
   </div>
 
+ {% if display_id != 'unit_services_listing' %}
+
   <div class="unit__services__list">
     {{ rows }}
   </div>
+
+ {% elseif display_id == 'unit_services_listing'  %}
+
+  <div class="unit__services__list">
+    <ul>
+      {{ rows }}
+    </ul>
+  </div>
+
+ {% endif %}
 
   {{ empty }}
   {{ pager }}
