--- a/templates/module/helfi_tpr/tpr-service.html.twig
+++ b/templates/module/helfi_tpr/tpr-service.html.twig
@@ -7,7 +7,7 @@
  */
 #}
 
-{% if view_mode != 'teaser' %}
+{% if view_mode == 'full' %}
 
   <article class="service service--full">
 
@@ -56,4 +56,22 @@
     </a>
   </div>
 
+
+{% elseif view_mode == 'listing' %}
+
+  {%
+    set service_classes = [
+      'service',
+      'service--listing',
+      not content_entity_published ? 'service--listing--unpublished',
+    ]
+  %}
+
+  {% set wrapper_attributes = create_attribute() %}
+
+  <li{{ wrapper_attributes.addClass(service_classes) }}>
+    <a href="{{ url('entity.tpr_service.canonical', { 'tpr_service': entity.id() }) }}">
+      {{ entity.label }}
+    </a>
+  </li>
 {% endif %}
