UHF-8530: Remove heading tags from linked cards

--- a/src/scss/02_mixins/_typography_mixins.scss
+++ b/src/scss/02_mixins/_typography_mixins.scss
@@ -28,3 +28,9 @@
     }
   }
 }
+
+// Adds heading related hyphens settings, useful when you want to fake certaing heading style
+@mixin heading-hyphens() {
+  hyphens: auto;
+  overflow-wrap: break-word;
+}
