--- a/src/scss/06_components/paragraphs/_content-cards.scss
+++ b/src/scss/06_components/paragraphs/_content-cards.scss
@@ -46,7 +46,9 @@ $-card-spacing: $spacing-and-half;
 }
 
 .content-card__title {
+  @include heading-hyphens;
   @include font('h4');
+  display: block;
   margin-top: $spacing;
 }
 
