--- a/src/scss/06_components/paragraphs/_list-of-links.scss
+++ b/src/scss/06_components/paragraphs/_list-of-links.scss
@@ -150,6 +150,7 @@ $-item-spacing: $spacing-triple;
   }
 
   .list-of-links__item__title {
+    @include heading-hyphens;
     @include font('h4');
     margin-block: 0;
     margin-inline-start: (100px + $spacing);
