--- a/templates/content/node--teaser.html.twig
+++ b/templates/content/node--teaser.html.twig
@@ -82,9 +82,9 @@
 
 {% set link_title %}
   {{ title_prefix }}
-  <h3 class="content-card__title">
+  <span class="content-card__title">
     {{ label }}
-  </h3>
+  </span>
   {{ title_suffix }}
 {% endset %}
 
