--- a/src/scss/06_components/paragraphs/_target-group-links.scss
+++ b/src/scss/06_components/paragraphs/_target-group-links.scss
@@ -45,6 +45,7 @@ $-title-spacing: calc(0.5 * (var(--icon-size) - var(--title-line-height))); // T
 }
 
 .target-group-link__title {
+  @include heading-hyphens;
   @include font('h4');
   grid-area: title;
   margin: 0;
