UHF-8530: Fix service heading styles from using hyphenation plugin

--- a/src/scss/06_components/pages/_service.scss
+++ b/src/scss/06_components/pages/_service.scss
@@ -21,6 +21,7 @@ $teaser-icon-size-desktop: 48px;
   }
 
   .service__title {
+    @include heading-hyphens;
     @include font('h4');
     margin: 0;
   }
