--- a/templates/module/helfi_tpr/tpr-service.html.twig
+++ b/templates/module/helfi_tpr/tpr-service.html.twig
@@ -49,7 +49,7 @@
 
   <div{{ wrapper_attributes.addClass(service_classes) }}>
     <a href="{{ url('entity.tpr_service.canonical', { 'tpr_service': entity.id() }) }}" class="service__link">
-      <span class="service__title hyphenate">
+      <span class="service__title">
         {{ entity.label }}
       </span>
       {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'arrow-right'} %}
