--- a/templates/content/node--teaser.html.twig
+++ b/templates/content/node--teaser.html.twig
@@ -72,11 +72,7 @@
 {%
   set classes = [
     'content-card',
-    'content-card--' ~ node.bundle|clean_class,
-    node.isPromoted() ? 'content-card--promoted',
-    node.isSticky() ? 'content-card--sticky',
     not node.isPublished() ? 'content-card--unpublished',
-    view_mode ? 'content-card--design-' ~ view_mode|clean_class,
   ]
 %}
 
@@ -95,7 +91,7 @@
   'rel': 'bookmark',
 } %}
 
-<article{{ attributes.addClass(classes) }}>
+<div{{ attributes.addClass(classes) }}>
 
   <div class="content-card__image">
     {% if image.0 %}
@@ -107,4 +103,4 @@
 
   {{ link(link_title, node_url, link_attributes) }}
 
-</article>
+</div>
