--- a/templates/module/helfi-news-item/news-teaser-generic.twig
+++ b/templates/module/helfi-news-item/news-teaser-generic.twig
@@ -7,7 +7,8 @@
   %}
 {% endif %}
 
-<div{{ attributes.addClass('news-listing__content', default_classes, class) }}">
+{# Role is removed from below to avoid populating UI with role="article" elements for accessibility #}
+<div{{ attributes.removeAttribute('role').addClass('news-listing__content', default_classes, class) }}">
   {# Short title or Title #}
   <{{ heading_level }} class="news-listing__title">
     {% set link_attributes = {
