--- a/templates/module/helfi_tpr/tpr-service-lower-content.html.twig
+++ b/templates/module/helfi_tpr/tpr-service-lower-content.html.twig
@@ -9,7 +9,7 @@
 
 {% set service_units_view = drupal_view_result('service_units', 'service_units')|length %}
 
-{% if service_units_view > 0 %}
+{% if service_units_view > 0 and not hide_service_points %}
   {% embed "@hdbt/misc/component.twig" with
     {
       component_classes: [
