UHF-8838: Minify HTML tags

--- a/templates/views/views-view--service-list--block.html.twig
+++ b/templates/views/views-view--service-list--block.html.twig
@@ -46,11 +46,9 @@
     </span>
   {% endif %}
 
-  <div class="service-list__results">
-    <ul>
-      {{ rows }}
-    </ul>
-  </div>
+  <ul class="service-list__results">
+    {{ rows }}
+  </ul>
 
   {{ empty }}
   {{ pager }}
