--- a/templates/views/views-view--unit-services.html.twig
+++ b/templates/views/views-view--unit-services.html.twig
@@ -51,11 +51,9 @@
     {% endif %}
   </div>
 
-  <div class="unit__services__list">
-    <ul>
-      {{ rows }}
-    </ul>
-  </div>
+  <ul class="unit__services__list">
+    {{ rows }}
+  </ul>
 
   {{ empty }}
   {{ pager }}
