UHF-8838: Unify dom with service list

--- a/templates/views/views-view--service-list--block.html.twig
+++ b/templates/views/views-view--service-list--block.html.twig
@@ -40,7 +40,7 @@
 
 <div{{attributes.addClass(classes)}}>
 
-  <ul class="service-list__results">
+  <ul class="service-list">
     {{ rows }}
   </ul>
 
