--- a/src/scss/06_components/pages/_unit.scss
+++ b/src/scss/06_components/pages/_unit.scss
@@ -89,6 +89,10 @@
 .unit__services {
   padding: 0;
 
+  .unit__services__content {
+    margin-top: 64px;
+  }
+
   .unit--services__container {
     padding-top: 0;
   }
