Revert "UHF-8838: Unify dom with service list"
This reverts commit 5bfdc2c1f6cca1b0b4ea094fb87703fc0c6fe2a8.

--- a/templates/views/views-view--service-list--block.html.twig
+++ b/templates/views/views-view--service-list--block.html.twig
@@ -40,7 +40,7 @@
 
 <div{{attributes.addClass(classes)}}>
 
-  <ul class="service-list">
+  <ul class="service-list__results">
     {{ rows }}
   </ul>
 
