--- a/templates/module/helfi_tpr/tpr-unit-lower-content.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit-lower-content.html.twig
@@ -10,7 +10,20 @@
 {% set services_view = drupal_view_result('unit_services', 'unit_services')|length %}
 
 {% if services_view > 0 %}
-  {{ drupal_view('unit_services', 'unit_services') }}
+  {% embed "@hdbt/misc/component.twig" with
+    {
+      component_classes: [
+      'component--unit-services',
+      'component--hardcoded',
+    ]
+    }
+  %}
+    {% block component_content %}
+      <div class="unit__services">
+        {{ drupal_view('unit_services', 'unit_services') }}
+      </div>
+    {% endblock component_content %}
+  {% endembed %}
 {% endif %}
 
 {% if content.accessibility_sentences|render %}
