UHF-8839: Add view id for results container

--- a/templates/views/views-view--unit-search.html.twig
+++ b/templates/views/views-view--unit-search.html.twig
@@ -54,7 +54,7 @@
   {{ exposed }}
   {{ attachment_before }}
 
-  <div class="unit-search__results">
+  <div class="unit-search__results" data-id-number="{{ dom_id }}">
     {% if total_rows %}
       <span class="unit-search__count-container">
         <span class="unit-search__count">{{ total_rows }}</span>
