--- a/src/scss/06_components/messages/_announcement.scss
+++ b/src/scss/06_components/messages/_announcement.scss
@@ -13,6 +13,7 @@
   background-color: var(--announcement-bg-color);
   box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.1);
   display: flex;
+  flex-direction: row-reverse;
   justify-content: space-between;
   min-height: var(--announcement-bg-size);
   padding-bottom: $spacing;
