--- a/templates/content/node--announcement--default.html.twig
+++ b/templates/content/node--announcement--default.html.twig
@@ -19,10 +19,17 @@
   %}
 {% endif %}
 
+{% if content.field_announcement_title.0['#context'].value %}
+  {% set announcement_title = content.field_announcement_title.0['#context'].value ~ ' -' %}
+{% endif %}
+
 {% set link = content.field_announcement_link[0] %}
 
 <section aria-label="{{ type_label }}" class="announcement js-announcement {{ block_modifier }} container" data-uuid="{{ node.uuid.value }}">
   <div {{ create_attribute(announcement_attributes) }}>
+    <button type="button" class="announcement__close js-announcement__close--disabled" aria-labelledby="{{announcement_close_labelled_by}}">
+      <span id="{{announcement_close_labelled_by}}" class="is-hidden">{{ [announcement_title, close_label, type_label|lower]|join(" ") }}</span>
+    </button>
     <div class="announcement__content">
       {% if content.body|render != null %}
         <div class="announcenemnt__content-body">
@@ -36,8 +43,5 @@
       {% endif %}
     </div>
     {% set announcement_close_labelled_by = "announcement__close__aria-label--" ~ random() %}
-    <button type="button" class="announcement__close js-announcement__close--disabled" aria-labelledby="{{announcement_close_labelled_by}}">
-      <span id="{{announcement_close_labelled_by}}" class="is-hidden">{{ [close_label, type_label|lower]|join(" ") }}</span>
-    </button>
   </div>
 </section>
