UHF-8839: Add views id for search results. Unify dom structure.

--- a/templates/views/views-view--service-list--block-search.html.twig
+++ b/templates/views/views-view--service-list--block-search.html.twig
@@ -52,10 +52,12 @@
 
   {% if is_ajax_request or total_rows > pager_items_per_page %}
     {{ exposed }}
-    <span class="service-list__count-container">
-      <span class="service-list__count">{{ total_rows ?? 0 }}</span>
-      {% trans with {'context': 'Service list count'}%}service{% plural total_rows %}services{% endtrans %}
-    </span>
+    <div class="services-search__results" data-id-number="{{ dom_id }}">
+      <span class="service-list__count-container">
+        <span class="service-list__count">{{ total_rows ?? 0 }}</span>
+        {% trans with {'context': 'Service list count'}%}service{% plural total_rows %}services{% endtrans %}
+      </span>
+    </div>
   {% endif %}
 
   {{ attachment_before }}
