UHF-8839: Update empty info to be focusable

--- a/templates/views/views-view--service-list--block-search.html.twig
+++ b/templates/views/views-view--service-list--block-search.html.twig
@@ -50,21 +50,22 @@
     </header>
   {% endif %}
 
-  {% if is_ajax_request or total_rows > pager_items_per_page %}
-    {{ exposed }}
-    <div class="services-search__results" data-id-number="{{ dom_id }}">
-      <span class="service-list__count-container">
-        <span class="service-list__count">{{ total_rows ?? 0 }}</span>
+  {{ exposed }}
+  <div class="services-search__results" data-id-number="{{ dom_id }}">
+    <span class="service-list__count-container">
+      {% if total_rows %}
+        <span class="service-list__count">{{ total_rows }}</span>
         {% trans with {'context': 'Service list count'}%}service{% plural total_rows %}services{% endtrans %}
-      </span>
-    </div>
-  {% endif %}
+      {% endif %}
 
+      {{ empty }}
+    </span>
+  </div>
   {{ attachment_before }}
 
   {{ rows }}
 
-  {{ empty }}
+  
   {{ pager }}
 
   {{ attachment_after }}
