--- a/templates/module/helfi_tpr/tpr-service-channel.html.twig
+++ b/templates/module/helfi_tpr/tpr-service-channel.html.twig
@@ -9,13 +9,15 @@
   {% set show_mail = true %}
 {% endif %}
 
-{%  set service_channel_heading_level = service_channel_heading_level|default('h4') %}
-
 {% set service_channel_eservice_links_new_tab = service_channel_eservice_links_new_tab|default(0) %}
 <div class="service-channel__content">
-  <{{ service_channel_heading_level }} class="service-channel__title">
-    {{ content.name }}
-  </{{ service_channel_heading_level }}>
+
+  {% if content.name|render %}
+    {% set service_channel_heading_level = service_channel_heading_level|default('h4') %}
+    <{{ service_channel_heading_level }} class="service-channel__title">
+      {{ content.name }}
+    </{{ service_channel_heading_level }}>
+  {% endif %}
 
   {% if content.availability_summary|render %}
     <div class="service-channel__availabilities">{{ content.availability_summary }}</div>
