--- a/src/scss/05_objects/_button.scss
+++ b/src/scss/05_objects/_button.scss
@@ -53,8 +53,7 @@
   box-sizing: border-box;
 }
 
-/* button transitions */
-
+// button transitions
 .hds-button:hover,
 .hds-button:focus,
 .hds-button:active {
@@ -104,8 +103,7 @@
   color: var(--color-hover-focus);
 }
 
-/* FOCUS OUTLINE */
-
+// FOCUS OUTLINE
 .hds-button:active,
 .hds-button:focus {
   outline: var(--outline-width) solid var(--focus-outline-color);
@@ -113,8 +111,7 @@
   outline-offset: 2px;
 }
 
-/* LABEL */
-
+// LABEL
 input[type='button'].hds-button,
 input[type='reset'].hds-button,
 input[type='submit'].hds-button,
@@ -131,200 +128,206 @@ input[type='submit'].hds-button {
   padding: var(--spacing-s) var(--spacing-l);
 }
 
-/* no icons */
-
+// no icons
 .hds-button__label:only-child {
   margin: 0 var(--spacing-2-xs);
 }
 
-/* supplementary with right icon */
-
+// supplementary with right icon
 .hds-button--supplementary .hds-button__label:first-child {
   padding-right: var(--spacing-3-xs);
 }
 
-/* supplementary with left icon */
-
+// supplementary with left icon
 .hds-button--supplementary .hds-icon + .hds-button__label:last-child {
   padding-left: var(--spacing-3-xs);
 }
 
-/* supplementary with both icons */
-
+// supplementary with both icons
 .hds-button--supplementary .hds-icon + .hds-button__label:not(:last-child) {
   padding-left: var(--spacing-3-xs);
   padding-right: var(--spacing-3-xs);
 }
 
-/* ICONS */
-
-/* left */
-
+// ICONS
+// left
 .hds-button .hds-icon {
   height: var(--spacing-m);
   margin-left: var(--spacing-s);
   width: var(--spacing-m);
 }
 
-/* right */
-
+// right
 .hds-button__label ~ .hds-icon {
   margin: 0 var(--spacing-s) 0 0;
 }
 
-/* both icons - left */
-
+// both icons - left
 .hds-button .hds-icon:first-of-type:not(:last-of-type) {
   margin: 0 0 0 var(--spacing-2-xs);
 }
 
-/* both icons - right */
-
+// both icons - right
 .hds-button .hds-icon:last-of-type:not(:first-of-type) {
   margin: 0 var(--spacing-2-xs) 0 0;
 }
 
-/* PRIMARY */
-
-/* default (bus) */
-
+// PRIMARY
+// default (bus)
 .hds-button--primary {
+  // Backgrounds
   --background-color: var(--theme-bg1, var(--color-bus));
   --background-color-hover: var(--theme-bg2, var(--color-bus-dark));
   --background-color-focus: var(--theme-bg1, var(--color-bus));
   --background-color-hover-focus: var(--theme-bg2, var(--color-bus-dark));
   --background-color-disabled: var(--color-black-20);
 
+  // Borders
   --border-color: var(--theme-bg1, var(--color-bus));
   --border-color-hover: var(--theme-bg1, var(--color-bus-dark));
   --border-color-focus: var(--theme-bg1, var(--color-bus));
   --border-color-hover-focus: var(--theme-bg1, var(--color-bus-dark));
   --border-color-disabled: var(--color-black-20);
 
+  // Colors
   --color: var(--theme-fg1, var(--color-white));
   --color-hover: var(--theme-fg2, var(--color-white));
   --color-focus: var(--theme-fg1, var(--color-white));
   --color-hover-focus: var(--theme-fg2, var(--color-white));
   --color-disabled: var(--color-white);
 
+  // Focus ring
   --focus-outline-color: var(--theme-focus, var(--color-coat-of-arms));
 }
 
-/* SECONDARY */
-
-/* default (bus) */
-
+// SECONDARY
+// default (bus)
 .hds-button--secondary {
+  // Backgrounds
   --background-color: var(--theme-bg2, transparent);
   --background-color-hover: var(--theme-bg1, var(--color-bus-light));
   --background-color-focus: var(--theme-bg2, transparent);
   --background-color-hover-focus: var(--theme-bg1, var(--color-bus-light));
   --background-color-disabled: transparent;
 
+  // Borders
   --border-color: var(--theme-bg1, var(--color-bus));
   --border-color-hover: var(--theme-bg2, var(--color-bus-dark));
   --border-color-focus: var(--theme-bg1, var(--color-bus));
   --border-color-hover-focus: var(--theme-bg2, var(--color-bus-dark));
   --border-color-disabled: var(--color-black-50);
 
+  // Colors
   --color: var(--theme-fg2, var(--color-bus));
   --color-hover: var(--theme-fg1, var(--color-bus-dark));
   --color-focus: var(--theme-fg2, var(--color-bus));
   --color-hover-focus: var(--theme-fg1, var(--color-bus-dark));
   --color-disabled: var(--color-black-40);
 
+  // Focus ring
   --focus-outline-color: var(--theme-focus, var(--color-coat-of-arms));
 }
 
-/* SUPPLEMENTARY */
-
+// SUPPLEMENTARY
 .hds-button--supplementary {
+  // Backgrounds
   --background-color: var(--theme-bg2, transparent);
   --background-color-hover: var(--theme-bg2, var(--color-bus-light));
   --background-color-focus: var(--theme-bg2, transparent);
   --background-color-hover-focus: var(--theme-bg2, var(--color-bus-light));
   --background-color-disabled: transparent;
 
+  // Borders
   --border-color: var(--theme-bg2, transparent);
   --border-color-hover: var(--theme-bg2, transparent);
   --border-color-focus: var(--theme-bg2, var(--color-coat-of-arms));
   --border-color-hover-focus: var(--theme-bg2, var(--color-coat-of-arms));
   --border-color-disabled: transparent;
 
+  // Colors
   --color: var(--theme-fg2, var(--color-bus));
   --color-hover: var(--theme-fg2, var(--color-bus-dark));
   --color-focus: var(--theme-fg2, var(--color-bus));
   --color-hover-focus: var(--theme-fg2, var(--color-bus-dark));
   --color-disabled: var(--color-black-40);
 
+  // Focus ring
   --focus-outline-color: var(--theme-focus, transparent);
 }
 
-/* LOADING */
-
+// LOADING
 .hds-button--loading {
+  // Backgrounds
   --background-color: transparent;
   --background-color-hover: transparent;
   --background-color-focus: transparent;
   --background-color-hover-focus: transparent;
   --background-color-disabled: transparent;
 
+  // Borders
   --border-color: transparent;
   --border-color-hover: transparent;
   --border-color-focus: transparent;
   --border-color-hover-focus: transparent;
   --border-color-disabled: transparent;
 
+  // Colors
   --color: var(--color-black-90);
   --color-hover: var(--color-black-90);
   --color-focus: var(--color-black-90);
   --color-hover-focus: var(--color-black-90);
   --color-disabled: var(--color-black-90);
 
+  // Cursor
   cursor: wait;
 }
 
-/* UTILITY */
-
-/* success */
-
+// UTILITY
+// success
 .hds-button--success {
+  // Backgrounds
   --background-color: var(--color-success);
   --background-color-hover: var(--color-success-dark);
   --background-color-focus: var(--color-success);
   --background-color-hover-focus: var(--color-success-dark);
 
+  // Borders
   --border-color: var(--color-success);
   --border-color-hover: var(--color-success-dark);
   --border-color-focus: var(--color-success);
   --border-color-hover-focus: var(--color-success-dark);
 
+  // Colors
   --color: var(--color-white);
   --color-hover: var(--color-white);
   --color-focus: var(--color-white);
   --color-hover-focus: var(--color-white);
 
+  // Focus ring
   --focus-outline-color: var(--theme-focus, var(--color-coat-of-arms));
 }
 
-/* danger */
-
+// danger
 .hds-button--danger {
+  // Backgrounds
   --background-color: var(--color-error);
   --background-color-hover: var(--color-error-dark);
   --background-color-focus: var(--color-error);
   --background-color-hover-focus: var(--color-error-dark);
 
+  // Borders
   --border-color: var(--color-error);
   --border-color-hover: var(--color-error-dark);
   --border-color-focus: var(--color-error);
   --border-color-hover-focus: var(--color-error-dark);
 
+  // Colors
   --color: var(--color-white);
   --color-hover: var(--color-white);
   --color-focus: var(--color-white);
   --color-hover-focus: var(--color-white);
 
+  // Focus ring
   --focus-outline-color: var(--theme-focus, var(--color-coat-of-arms));
 }
 
@@ -553,59 +556,83 @@ a[data-variant][href] {
   // Content from HDS button.css starts
   // .hds-button
   &[data-variant='primary'] {
+    // Backgrounds
     --background-color: var(--theme-bg1, var(--color-bus));
     --background-color-hover: var(--theme-bg2, var(--color-bus-dark));
     --background-color-focus: var(--theme-bg1, var(--color-bus));
     --background-color-hover-focus: var(--theme-bg2, var(--color-bus-dark));
     --background-color-disabled: var(--color-black-20);
+
+    // Borders
     --border-color: var(--theme-bg1, var(--color-bus));
     --border-color-hover: var(--theme-bg1, var(--color-bus-dark));
     --border-color-focus: var(--theme-bg1, var(--color-bus));
     --border-color-hover-focus: var(--theme-bg1, var(--color-bus-dark));
     --border-color-disabled: var(--color-black-20);
+
+    // Colors
     --color: var(--theme-fg1, var(--color-white));
     --color-hover: var(--theme-fg2, var(--color-white));
     --color-focus: var(--theme-fg1, var(--color-white));
     --color-hover-focus: var(--theme-fg2, var(--color-white));
     --color-disabled: var(--color-white);
+
+    // Focus ring
     --focus-outline-color: var(--theme-focus, var(--color-coat-of-arms));
   }
 
+  // SECONDARY
+  // default (bus)
   &[data-variant='secondary'] {
+    // Backgrounds
     --background-color: var(--theme-bg2, transparent);
     --background-color-hover: var(--theme-bg1, var(--color-bus-light));
     --background-color-focus: var(--theme-bg2, transparent);
     --background-color-hover-focus: var(--theme-bg1, var(--color-bus-light));
     --background-color-disabled: transparent;
+
+    // Borders
     --border-color: var(--theme-bg1, var(--color-bus));
     --border-color-hover: var(--theme-bg2, var(--color-bus-dark));
     --border-color-focus: var(--theme-bg1, var(--color-bus));
     --border-color-hover-focus: var(--theme-bg2, var(--color-bus-dark));
     --border-color-disabled: var(--color-black-50);
+
+    // Colors
     --color: var(--theme-fg2, var(--color-bus));
     --color-hover: var(--theme-fg1, var(--color-bus-dark));
     --color-focus: var(--theme-fg2, var(--color-bus));
     --color-hover-focus: var(--theme-fg1, var(--color-bus-dark));
     --color-disabled: var(--color-black-40);
+
+    // Focus ring
     --focus-outline-color: var(--theme-focus, var(--color-coat-of-arms));
   }
 
+  // SUPPLEMENTARY
   &[data-variant='supplementary'] {
+    // Backgrounds
     --background-color: var(--theme-bg2, transparent);
     --background-color-hover: var(--theme-bg2, var(--color-bus-light));
     --background-color-focus: var(--theme-bg2, transparent);
     --background-color-hover-focus: var(--theme-bg2, var(--color-bus-light));
     --background-color-disabled: transparent;
+
+    // Borders
     --border-color: var(--theme-bg2, transparent);
     --border-color-hover: var(--theme-bg2, transparent);
     --border-color-focus: var(--theme-bg2, var(--color-coat-of-arms));
     --border-color-hover-focus: var(--theme-bg2, var(--color-coat-of-arms));
     --border-color-disabled: transparent;
+
+    // Colors
     --color: var(--theme-fg2, var(--color-bus));
     --color-hover: var(--theme-fg2, var(--color-bus-dark));
     --color-focus: var(--theme-fg2, var(--color-bus));
     --color-hover-focus: var(--theme-fg2, var(--color-bus-dark));
     --color-disabled: var(--color-black-40);
+
+    // Focus ring
     --focus-outline-color: var(--theme-focus, transparent);
   }
 }
